<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="buu.informatics.s59161073.parkingv1.InfoFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="153dp"
            android:layout_height="156dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars[3]" />

        <TextView
            android:id="@+id/info_name"
            android:layout_width="325dp"
            android:layout_height="43dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/info_name_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_card2" />

        <TextView
            android:id="@+id/info_surename"
            android:layout_width="325dp"
            android:layout_height="43dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/info_surename_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_name" />

        <TextView
            android:id="@+id/info_nickname"
            android:layout_width="325dp"
            android:layout_height="43dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/info_nickname_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_surename" />

        <TextView
            android:id="@+id/info_card2"
            android:layout_width="325dp"
            android:layout_height="43dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/info_card_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

